--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 :root {
   --color-green: #10b380;
   --color-yellow-green: #95b03c;
-  --color-grey-blue: #2c3e50;
+  --color-grey-blue: #21486d;
   --color-shadow: rgba(44, 62, 80, 0.5);
   --background-light: #F8F8F8;
 }
