--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,7 +37,7 @@ a:hover {
 }
 
 .fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
+  transition: opacity 1s;
 }
 .fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
   opacity: 0;
